# mcp-mlx-launcher

./: README.md  README_JA.md  cov  devsetup  pyproject.toml  pytest.ini
src/mcp_mlx_launcher/: process_manager.py  server.py
tests/: test_process_manager.py  test_server.py
